# newsdigest

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ai-brief.py  config.example.yaml  newsdigest.py  pyproject.toml  run-homesdigest.sh  run-newsdigest.sh
openclaw/: SKILL.md  homes-skill.md
